[project]
name = "sfi-autoship-colav-simulator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cerberus>=1.3.7",
    "dacite>=1.9.2",
    "decorator>=5.2.1",
    "geopandas>=1.1.1",
    "geopy>=2.4.1",
    "gymnasium>=0.28.1",
    "matplotlib>=3.10.7",
    "matplotlib-scalebar>=0.9.0",
    "moviepy>=2.2.1",
    "numpy>=1.20",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.3",
    "psutil>=7.1.2",
    "pyyaml>=6.0.3",
    "scikit-image>=0.25.2",
    "scipy>=1.16.3",
    "shapely>=2.1.2",
    "stable-baselines3>=2.7.0",
    "torch>=1.13",
    "tqdm>=4.67.1",
    "trafficgen",
    "seacharts",
    "gdal>=3.11.4",
]

[tool.uv.sources]
trafficgen = { path = "external/ship-traffic-generator" }
seacharts = {path = "external/seacharts"}
gdal = [
  { index = "gdal-wheels", marker = "sys_platform == 'linux'" },
  { index = "geospatial_wheels", marker = "sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "geospatial_wheels"
url = "https://nathanjmcdougall.github.io/geospatial-wheels-index/"
explicit = true

[[tool.uv.index]]
name = "gdal-wheels"
url = "https://gitlab.com/api/v4/projects/61637378/packages/pypi/simple"
explicit = true
